--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -2,6 +2,7 @@
 $gold_color: #e3b873;
 $white_color: #fff;
 $dark_color: #363636;
+$darkness_color: #181818;
 $grey_color: #959595;
 
 // btn-colors
