--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,10 @@
 @import "components/section-title";
 @import "components/form";
 @import "components/img-3-col";
+@import "components/default-list";
 @import "layout/header";
 @import "layout/complete-projects";
 @import "layout/on-control";
 @import "layout/types-repair";
+@import "layout/fantasy";
+@import "layout/design-project";
