refactor: change structure of 'complete proj' section

--- a/scss/components/_section-title-icon.scss
+++ b/scss/components/_section-title-icon.scss
@@ -1,4 +1,4 @@
-@mixin section-title($h2_color, $bckg_img) {
+@mixin section-title-icon($h2_color, $bckg_img) {
   h2 {
     text-align: center;
     @include yeseva-font(1.25rem, $h2_color, uppercase);
