--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,9 @@
 @import "components/fonts";
 @import "components/menu";
 @import "components/buttons";
-@import "components/section-title";
+@import "components/pagination-btn";
+@import "components/section-title-icon";
+@import "components/section-title-txt";
 @import "components/form";
 @import "components/img-3-col";
 @import "components/default-list";
@@ -14,3 +16,4 @@
 @import "layout/types-repair";
 @import "layout/fantasy";
 @import "layout/design-project";
+@import "layout/steps-to-goal";
