--- a/scss/main.css
+++ b/scss/main.css
@@ -190,6 +190,80 @@ main {
   cursor: pointer;
 }
 
+.projects__addition-info .projects__pagination, .steps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.projects__addition-info .projects__pagination .pagination-counter, .steps .pagination-counter {
+  font-family: "Yeseva One", cursive;
+  text-transform: none;
+  font-size: 1.13rem;
+  color: #fff;
+}
+
+.projects__addition-info .projects__pagination .control-left-arrow, .steps .control-left-arrow {
+  width: 42px;
+  height: 14px;
+  margin-right: 30px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  background-image: url("../assets/img/arrow-raw.png");
+  cursor: pointer;
+}
+
+.projects__addition-info .projects__pagination .control-dot, .steps .control-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+}
+
+.projects__addition-info .projects__pagination .control-dot_active, .steps .control-dot_active {
+  width: 13px;
+  height: 13px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.projects__addition-info .projects__pagination span:not(:last-of-type), .steps span:not(:last-of-type) {
+  margin-right: 18px;
+}
+
+.projects__addition-info .projects__pagination .control-right-arrow, .steps .control-right-arrow {
+  width: 42px;
+  height: 14px;
+  background-image: url("../assets/img/arrow-raw.png");
+  cursor: pointer;
+}
+
+.projects__left-block .projects__txt h2, .steps .steps__left-block h2 {
+  font-family: "Yeseva One", cursive;
+  text-transform: uppercase;
+  font-size: 1.7rem;
+  color: #e3b873;
+  line-height: 2.3rem;
+}
+
+.projects__left-block .projects__txt h2 span, .steps .steps__left-block h2 span {
+  position: relative;
+}
+
+.projects__left-block .projects__txt h2 span::after, .steps .steps__left-block h2 span::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 115%;
+  width: 50%;
+  height: 1px;
+  background-color: #e3b873;
+}
+
 .def-list {
   font-family: "Proxima Nova", sans-serif;
   text-transform: none;
@@ -391,7 +465,7 @@ main {
   color: #fff;
 }
 
-.section-wrapper_projects {
+.projects-wrapper {
   padding: 8% 0 30%;
   color: #fff;
   background-color: #131313;
@@ -401,57 +475,35 @@ main {
   background-blend-mode: overlay;
 }
 
-.projects-wrapper {
+.projects-wrapper .section-wrapper {
   position: relative;
 }
 
-.projects__main-block {
+.projects__left-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 @media screen and (max-width: 1170px) {
-  .projects__main-block {
+  .projects__left-block {
     display: block;
   }
 }
 
-.projects__main-block .projects__txt {
+.projects__left-block .projects__txt {
   display: block;
   width: 40%;
   padding-top: 5%;
 }
 
 @media screen and (max-width: 1170px) {
-  .projects__main-block .projects__txt {
+  .projects__left-block .projects__txt {
     width: 100%;
   }
 }
 
-.projects__main-block .projects__txt h2 {
-  font-family: "Yeseva One", cursive;
-  text-transform: uppercase;
-  font-size: 1.7rem;
-  color: #e3b873;
-  line-height: 2.3rem;
-}
-
-.projects__main-block .projects__txt h2 span {
-  position: relative;
-}
-
-.projects__main-block .projects__txt h2 span::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 115%;
-  width: 50%;
-  height: 1px;
-  background-color: #e3b873;
-}
-
-.projects__main-block .projects__txt p {
+.projects__left-block .projects__txt p {
   padding: 8% 15% 0 0;
   font-family: "Futura", sans-serif;
   text-transform: none;
@@ -461,12 +513,12 @@ main {
 }
 
 @media screen and (max-width: 1170px) {
-  .projects__main-block .projects__txt p {
+  .projects__left-block .projects__txt p {
     padding: 4% 0 0;
   }
 }
 
-.projects__main-block .projects__slider {
+.projects__left-block .projects__slider {
   position: absolute;
   left: 40%;
   padding-top: 5%;
@@ -474,12 +526,12 @@ main {
 }
 
 @media screen and (max-width: 1170px) {
-  .projects__main-block .projects__slider {
+  .projects__left-block .projects__slider {
     width: 100%;
   }
 }
 
-.projects__main-block .projects__slider .projects__units {
+.projects__left-block .projects__slider .projects__units {
   position: absolute;
   top: 0;
   display: -webkit-box;
@@ -492,26 +544,26 @@ main {
 }
 
 @media screen and (max-width: 1170px) {
-  .projects__main-block .projects__slider .projects__units {
+  .projects__left-block .projects__slider .projects__units {
     position: static;
     margin-bottom: 5%;
   }
 }
 
-.projects__main-block .projects__slider .projects__units li {
+.projects__left-block .projects__slider .projects__units li {
   cursor: pointer;
 }
 
-.projects__main-block .projects__slider .projects__units li:not(:last-child) {
+.projects__left-block .projects__slider .projects__units li:not(:last-child) {
   margin-right: 60px;
 }
 
-.projects__main-block .projects__slider .projects__units-1_active {
+.projects__left-block .projects__slider .projects__units-1_active {
   position: relative;
   color: #e3b873;
 }
 
-.projects__main-block .projects__slider .projects__units-1_active::after {
+.projects__left-block .projects__slider .projects__units-1_active::after {
   content: "";
   position: absolute;
   top: 150%;
@@ -521,27 +573,27 @@ main {
   background-color: #e3b873;
 }
 
-.projects__main-block .projects__slider .projects__slider-img {
+.projects__left-block .projects__slider .projects__slider-img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.projects__main-block .projects__slider .projects__slider-img li {
+.projects__left-block .projects__slider .projects__slider-img li {
   margin-right: 25px;
 }
 
-.projects__main-block .projects__slider .projects__slider-img li img {
+.projects__left-block .projects__slider .projects__slider-img li img {
   display: block;
 }
 
 @media screen and (max-width: 1170px) {
-  .projects__main-block .projects__slider .projects__slider-img li img {
+  .projects__left-block .projects__slider .projects__slider-img li img {
     width: 88vw;
   }
 }
 
-.projects__main-block .projects__slider .projects__slider-btn-next {
+.projects__left-block .projects__slider .projects__slider-btn-next {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -610,54 +662,10 @@ main {
   }
 }
 
-.projects__addition-info .projects__control-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 44%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
 @media screen and (max-width: 1170px) {
-  .projects__addition-info .projects__control-wrap {
+  .projects__addition-info .projects__pagination {
     display: none;
   }
-}
-
-.projects__addition-info .projects__control-left-arrow {
-  width: 42px;
-  height: 14px;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  background-image: url("../assets/img/arrow-raw.png");
-  cursor: pointer;
-}
-
-.projects__addition-info .projects__control-dot {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.3);
-  cursor: pointer;
-}
-
-.projects__addition-info .projects__control-dot_active {
-  width: 13px;
-  height: 13px;
-  background-color: #fff;
-  cursor: pointer;
-}
-
-.projects__addition-info .projects__control-right-arrow {
-  width: 42px;
-  height: 14px;
-  background-image: url("../assets/img/arrow-raw.png");
-  cursor: pointer;
 }
 
 .shift-section-on-control {
@@ -1567,5 +1575,50 @@ main {
   margin-right: 4px;
   border-radius: 50%;
   background-color: #959595;
+}
+
+.steps {
+  padding: 33% 0;
+  background-color: #131313;
+}
+
+.steps .section-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.steps .steps__left-block {
+  width: 340px;
+}
+
+.steps .steps__left-block h2 span::after {
+  left: 155%;
+}
+
+.steps .steps__left-block .steps__title {
+  font-family: "Yeseva One", cursive;
+  text-transform: uppercase;
+  font-size: 0.94rem;
+  color: #e3b873;
+}
+
+.steps .steps__left-block .steps__txt {
+  margin-top: 16px;
+  font-family: "Futura", sans-serif;
+  text-transform: none;
+  font-size: 0.94rem;
+  color: #fff;
+  line-height: 1.56rem;
+}
+
+.intro-txt {
+  font-family: "Futura", sans-serif;
+  text-transform: uppercase;
+  font-size: 0.94rem;
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
