--- a/scss/layout/_steps-to-goal.scss
+++ b/scss/layout/_steps-to-goal.scss
@@ -1,5 +1,5 @@
 .steps {
-  padding: 33% 0;
+  padding: 35% 0;
   background-color: $back-dark;
   @extend %pagination-btn;
 
@@ -10,8 +10,10 @@
 
   .steps__left-block {
     width: 340px;
+    transform: translate(0px, -15%);
 
     h2 {
+      margin-bottom: 92px;
       @extend %section-title-txt;
 
       span::after {
@@ -21,6 +23,7 @@
 
     .steps__title {
       @include yeseva-font(0.94rem, $gold_color, uppercase);
+      line-height: 1.44rem;
     }
 
     .steps__txt {
@@ -28,9 +31,97 @@
       @include futura-font(0.94rem, $white_color, none);
       line-height: 1.56rem;
     }
+
+    .steps__pagination {
+      margin-top: 100px;
+      @extend %pagination-btn;
+    }
+  }
+
+  .steps__right-block {
+    img {
+      margin-top: 45px;
+    }
+
+    .show-projets {
+      display: grid;
+      grid-row-gap: 36px;
+      grid-template-areas:
+        "item1 item2 item3"
+        "item4 item5 item6";
+      justify-content: space-between;
+      color: $white_color;
+    }
+
+    .show-projets__item_1 {
+      grid-area: item1;
+    }
+
+    .show-projets__item_2 {
+      grid-area: item2;
+    }
+
+    .show-projets__item_3 {
+      grid-area: item3;
+    }
+
+    .show-projets__item_4 {
+      grid-area: item4;
+    }
+
+    .show-projets__item_5 {
+      grid-area: item5;
+    }
+
+    .show-projets__item_6 {
+      grid-area: item6;
+    }
+
+    .show-projets__item {
+      position: relative;
+      @include futura-font(0.94rem, inherit, none);
+      line-height: 1.13rem;
+
+      &::before {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #13131381;
+        z-index: 122;
+      }
+
+      span {
+        position: relative;
+        @include yeseva-font(0.94rem, inherit, none);
+
+        &::after {
+          position: absolute;
+          content: "";
+          left: 0;
+          bottom: -15%;
+          width: 100%;
+          height: 1px;
+          background-color: $gold_color;
+        }
+      }
+
+      p {
+        margin-top: 17px;
+      }
+    }
+
+    .show-projets__item_active {
+      &::before {
+        display: none;
+      }
+    }
   }
 }
 
 .intro-txt {
+  margin-bottom: 18px;
   @include futura-font(0.94rem, $white_color, uppercase);
 }
