refactor: change layout of the 'types-repair' section

--- a/scss/layout/_on-control.scss
+++ b/scss/layout/_on-control.scss
@@ -1,9 +1,8 @@
-.shift-section-on-control {
+.on-control {
   position: relative;
-  height: 850px;
 }
 
-.on-control {
+.on-control__inner {
   position: absolute;
   top: -300px;
   width: 100%;
