--- a/scss/layout/_types-repair.scss
+++ b/scss/layout/_types-repair.scss
@@ -1,4 +1,5 @@
 .types-repair {
+  padding-top: 60%;
   text-align: center;
 }
 
@@ -32,8 +33,6 @@
     top: -10%;
     width: 100%;
     height: 100%;
-    // left: -31%;
-    // width: 50vw;
   }
 
   img {
