--- a/scss/main.css
+++ b/scss/main.css
@@ -670,12 +670,11 @@ main {
   }
 }
 
-.shift-section-on-control {
+.on-control {
   position: relative;
-  height: 850px;
 }
 
-.on-control {
+.on-control__inner {
   position: absolute;
   top: -300px;
   width: 100%;
@@ -684,7 +683,7 @@ main {
   background-color: transparent;
 }
 
-.on-control .form .form__display {
+.on-control__inner .form .form__display {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -693,7 +692,7 @@ main {
           justify-content: center;
 }
 
-.on-control .form .form__main-group {
+.on-control__inner .form .form__main-group {
   width: 18%;
   height: 45px;
   margin-right: 3%;
@@ -704,7 +703,7 @@ main {
   border-bottom: 1px solid rgba(54, 54, 54, 0.3);
 }
 
-.on-control .form .form__main-group label {
+.on-control__inner .form .form__main-group label {
   display: block;
   text-align: left;
   font-family: "Futura", sans-serif;
@@ -713,7 +712,7 @@ main {
   color: #959595;
 }
 
-.on-control .form .form__main-group input {
+.on-control__inner .form .form__main-group input {
   padding-top: 1%;
   border: 0;
   font-family: "Futura", sans-serif;
@@ -723,23 +722,23 @@ main {
   background-color: transparent;
 }
 
-.on-control .form .form__main-group input::-webkit-input-placeholder {
+.on-control__inner .form .form__main-group input::-webkit-input-placeholder {
   color: inherit;
 }
 
-.on-control .form .form__main-group input:-ms-input-placeholder {
+.on-control__inner .form .form__main-group input:-ms-input-placeholder {
   color: inherit;
 }
 
-.on-control .form .form__main-group input::-ms-input-placeholder {
+.on-control__inner .form .form__main-group input::-ms-input-placeholder {
   color: inherit;
 }
 
-.on-control .form .form__main-group input::placeholder {
+.on-control__inner .form .form__main-group input::placeholder {
   color: inherit;
 }
 
-.on-control .form .form__checkbox {
+.on-control__inner .form .form__checkbox {
   margin-top: 2%;
   font-family: "Futura", sans-serif;
   text-transform: none;
@@ -747,7 +746,7 @@ main {
   color: inherit;
 }
 
-.on-control .form .form__checkbox .form__checkbox-label {
+.on-control__inner .form .form__checkbox .form__checkbox-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -760,17 +759,17 @@ main {
           align-items: center;
 }
 
-.on-control .form .form__checkbox input {
+.on-control__inner .form .form__checkbox input {
   position: relative;
   left: 18px;
   opacity: 0;
 }
 
-.on-control .form .form__checkbox input:checked + .form__checkmark::after {
+.on-control__inner .form .form__checkbox input:checked + .form__checkmark::after {
   display: block;
 }
 
-.on-control .form .form__checkbox .form__checkmark {
+.on-control__inner .form .form__checkbox .form__checkmark {
   position: relative;
   top: 0;
   left: 0;
@@ -782,7 +781,7 @@ main {
   cursor: pointer;
 }
 
-.on-control .form .form__checkbox .form__checkmark::after {
+.on-control__inner .form .form__checkbox .form__checkmark::after {
   content: "";
   position: absolute;
   display: none;
@@ -796,7 +795,7 @@ main {
           transform: rotate(45deg);
 }
 
-.on-control .form button {
+.on-control__inner .form button {
   width: 200px;
   height: 50px;
   border-radius: 2px;
@@ -810,7 +809,7 @@ main {
   cursor: pointer;
 }
 
-.on-control .form button a {
+.on-control__inner .form button a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -918,6 +917,7 @@ main {
 }
 
 .types-repair {
+  padding-top: 60%;
   text-align: center;
 }
 
